modified README to include deployed project link

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://bonniiez.github.io/recipe-app",
+  "homepage": "http://bonniiez.github.io/react-recipe-app",
   "name": "recipe-app",
   "version": "0.1.0",
   "private": true,
